fix - Security Session OK